# pafenet

./: .gitignore  .gitmodules  LICENSE  Pafenet.cs  Program.cs  README.md  pafenet-lib.csproj  pafenet.csproj
pafe_sfreader/: CMakeLists.txt  build-linux-arm.sh  build-linux-x64.sh  build-win64.bat  pafe_sfreader.c
